# die-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
examples/: scan_file.rs
libdie++/: CMakeLists.txt  test.cpp
libdie++/cmake/: FindDieLibrary.cmake
libdie++/inc/: die.hpp
libdie++/src/: die.cpp
src/: error.rs  lib.rs  prelude.rs
