[package]
name = "die"
version = "0.2.0"
edition = "2024"
authors = ["Christophe Alladoum"]
description = "Native Rust bindings for @horsicq's Detect-It-Easy"
homepage = "https://github.com/elastic/die-rust"
repository = "https://github.com/elastic/die-rust"
license = "Apache-2.0"
keywords = ["detect-it-easy", "malware", "packer"]
categories = ["api-bindings"]
readme = "README.md"

build = "build.rs"

[lib]
crate-type = ["rlib"]

[[example]]
name = "scan_file"

[dependencies]
bitflags = "2.6.0"
derive_more = { version = "2.0.1", features = ["from", "display"] }

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
memmap2 = "0.9.5"
